--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+body{
+  font-weight: 700;
 
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
