--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -1,14 +1,32 @@
 /* index.css */
 body {
   font-style: bold;
+  
 }
+.custom-text {
+  color: rgb(132, 0, 234); /* Change to your preferred color */
+  font-size: 4rem; /* Change to your preferred size */
+}
+
 .intro-container {
     text-align: center; /* Center text within this container */
     margin-bottom: 40px;
-    font-weight:500; /* Add space below the intro section */
+    font-weight:700; /* Add space below the intro section */
     font-style: bold;
+
     }
-  
+@media (max-width: 768px) {
+  h1{
+  line-height: 1.1;
+
+  }
+p {
+  font-size: .8rem;
+  }    
+  h2{
+    font-size: 1.2rem;
+  }
+}
   .calculator-container {
     display: flex;
     flex-direction: column;
@@ -21,19 +39,32 @@ body {
     font-style: bold;
 
   }
+ h1{
+  font-size: 3rem;
+    font-weight:800; /* Add space below the intro section */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add drop shadow to text */
   
-  .centered-text h1, .centered-text h2, .centered-text p {
-    margin: 0; /* Reset default margin */
-    font-style: bold;
-
   }
-  /* index.css */
+  h2{
+    font-weight: 700;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.18); /* Add drop shadow to text */
+  }
+  p{
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.14); /* Add drop shadow to text */
+  color: rgb(132, 0, 234); /* Change to your preferred color */
+    
+  }
+  .centered-text h1, .centered-text h2, .centered-text p {
+    margin: 0; 
+  }
 
 .calculator-button-container {
   text-align: center;
   margin: 20px;
 }
-
+.calcCal{
+  font-size:2rem;
+}
 .show-calculator-button {
   background-color: #000000;
   color: white;
@@ -76,4 +107,13 @@ body {
   border: none;
   padding: 5px 10px;
   cursor: pointer;
+}
+.slick-slide {
+  display: flex !important;
+  justify-content: center;
+}
+.workout-cards {
+  display: flex;
+  justify-content: center; /* Center the carousel itself */
+  align-items: center;
 }
