--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -1,6 +1,7 @@
 /* index.css */
 body {
   font-style: bold;
+  margin:10px;
   
 }
 .custom-text {
@@ -18,7 +19,6 @@ body {
 @media (max-width: 768px) {
   h1{
   line-height: 1.1;
-
   }
 p {
   font-size: .8rem;
@@ -46,8 +46,7 @@ p {
   
   }
   h2{
-    font-weight: 700;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.18); /* Add drop shadow to text */
+    font-weight: 800;
   }
   p{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.14); /* Add drop shadow to text */
@@ -76,6 +75,7 @@ p {
   cursor: pointer;
 }
 
+
 .overlay {
   position: fixed;
   top: 0;
@@ -87,6 +87,7 @@ p {
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  padding: 10px; /* Add padding to ensure spacing on smaller screens */
 }
 
 .modal {
@@ -96,7 +97,9 @@ p {
   width: 80%;
   max-width: 500px;
   position: relative;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
+
 
 .close-modal-button {
   position: absolute;
@@ -116,4 +119,11 @@ p {
   display: flex;
   justify-content: center; /* Center the carousel itself */
   align-items: center;
+}
+.left-text{
+  display:flex ;
+  flex-direction: column ;
+  align-items:start;
+  margin-top: 30px;
+  margin-left:20px;
 }
