--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,10 @@ body{
     color: #213547;
     background-color: #ffffff;
   }
-
+  nav {
+    color: #ffffff;
+    /* background-color: #ffffff; */
+  }
   button {
     background-color: #f9f9f9;
   }
