--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -2,6 +2,7 @@
 body {
   font-style: bold;
   margin:10px;
+  max-width: 100%;
   
 }
 .custom-text {
@@ -40,7 +41,8 @@ p {
 
   }
  h1{
-  font-size: 3rem;
+  margin-top:0%;
+  font-size: 2rem;
     font-weight:800; /* Add space below the intro section */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add drop shadow to text */
   
