--- a/src/layouts/root.css
+++ b/src/layouts/root.css
@@ -1,11 +1,14 @@
-
 .navbar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between; /* Align items to left and right */
   padding: 10px;
   width: 100%;
   box-sizing: border-box;
   font-style: bold;
+}
+
+.navbar .logo-container {
+  margin-right: 1rem; /* Add space between logo and nav links */
 }
 
 .navbar ul {
@@ -14,14 +17,13 @@
   gap: 20px;
   margin: 0;
   padding: 0;
-  
 }
 
 .navbar a {
   color: rgb(0, 0, 0); /* Override global link color */
   text-decoration: none;
   font-weight: 700;
-  font-style:bold;
+  font-style: bold;
 }
 
 .navbar a:hover {
@@ -35,8 +37,7 @@
 body {
   margin: 0;
   font-weight: 500;
-
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  }
+}
