--- a/src/routes/WorkoutPlan/WorkoutPlan.css
+++ b/src/routes/WorkoutPlan/WorkoutPlan.css
@@ -36,6 +36,8 @@
   margin-top: 100%;
   font-size: 18px;
   margin-bottom: 5px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); 
+
 }
 
 .workout-plan p {
