--- a/src/routes/CalorieCalculator/CalorieCalculator.css
+++ b/src/routes/CalorieCalculator/CalorieCalculator.css
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  
 }
 .calcCalHeader {
   display: flex;
@@ -24,7 +25,9 @@
   display: flex;
   align-items: start;
   margin:auto;
+
 }
+
 
 /* Button Styling */
 button {
@@ -40,6 +43,7 @@ button {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  font-weight: 700;
 }
 
 button:hover {
