--- a/src/routes/Footer/Footer.css
+++ b/src/routes/Footer/Footer.css
@@ -8,9 +8,7 @@ footer {
     margin-bottom: 20px;
   }
   
-  .legal {
-    font-size: 0.8em;
-  }
+ 
   
   a {
     color: #333;
@@ -29,19 +27,15 @@ footer {
   /* Additional styles */
   
   footer {
+    margin-top:40px;
     background-color: #f5f5f5; /* Light gray background */
     display: flex;
     justify-content: center; /* Center content horizontally */
     align-items: center; /* Center content vertically */
   }
+
   
-  .contact, .legal {
-    margin: 0 20px; /* Add horizontal margin for spacing */
-  }
-  
-  .legal {
-    margin-top: 10px; /* Add top margin for spacing */
-  }
+
   
   .copyright {
     font-size: 0.7em;
