--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -86,11 +86,11 @@ p {
 .calculator-button-container {
   text-align: center;
   margin: 20px;
+  margin-bottom: 50px;
 }
 
 .calcCal {
   font-size: 2rem;
-  
 }
 
 .show-calculator-button {
@@ -104,40 +104,6 @@ p {
   cursor: pointer;
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-  padding: 10px;
-}
-
-.modal {
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
-  width: 80%;
-  max-width: 500px;
-  position: relative;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-.close-modal-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: #000000;
-  color: rgb(255, 255, 255);
-  border: none;
-  padding: 5px 10px;
-  cursor: pointer;
-}
 
 .slick-slide {
   display: flex !important;
