--- a/src/routes/Footer/Footer.css
+++ b/src/routes/Footer/Footer.css
@@ -8,8 +8,6 @@ footer {
     margin-bottom: 20px;
   }
   
- 
-  
   a {
     color: #333;
     text-decoration: none;
@@ -30,12 +28,10 @@ footer {
     margin-top:40px;
     background-color: #f5f5f5; /* Light gray background */
     display: flex;
+    height: auto;
     justify-content: center; /* Center content horizontally */
     align-items: center; /* Center content vertically */
   }
-
-  
-
   
   .copyright {
     font-size: 0.7em;
