--- a/src/routes/WorkoutPlan/WorkoutPlan.css
+++ b/src/routes/WorkoutPlan/WorkoutPlan.css
@@ -1,47 +1,53 @@
-.workout-cards {
-  display: flex;
-  justify-content: center; /* Center the carousel itself */
-  align-items: center;
-}
 .workout-plan {
   border-radius: 35px;
   box-shadow: 0px 5px 7px rgba(0, 0, 0, .6);
   padding: 20px;
   margin: 10px;
-  margin-bottom: 10%;
-  width: 200px; 
+  margin-bottom: 20%;
+  width: 200px;
   height: 350px;
   background-size: cover;
   background-position: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for zoom and shadow */
-  position: relative; /* To position overlay text correctly */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  text-align: center;
+  overflow: hidden;
+   /* Ensure text stays within the bounds */
+}
+strong{
+  color: white !important;
 }
 @media (max-width: 768px) {
   .workout-plan {
-    width: 300px; 
-  height: 400px; /* Adjust width as needed to fit nicely */
+    width: 300px;
+    height: 400px;
   }
 }
+
 .workout-plan:hover {
-  transform: scale(1.05); /* Slight zoom effect */
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3); /* Enhanced shadow on hover */
+  transform: scale(1.05);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
 }
+
 .workout-plan h2,
 .workout-plan p {
   color: white;
   font-weight: 700;
+  margin: 0; /* Remove default margin */
+  padding: 5px; /* Optional: add padding for better readability */
 }
 
 .workout-plan h2 {
-  margin-top: 100%;
   font-size: 18px;
-  margin-bottom: 5px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); 
-
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 .workout-plan p {
   font-size: 14px;
   line-height: 1.5;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
