--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -4,9 +4,9 @@ body {
   margin: 10px;
 }
 
-.custom-text {
+.customtext {
   color: rgb(132, 0, 234); 
-  font-size: 4rem; 
+  font-size: 3rem; 
 }
 
 .get_started {
@@ -33,6 +33,7 @@ body {
   font-weight: 700;
 }
 .header-container {
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,12 +44,14 @@ body {
 @media (max-width: 768px) {
   h1 {
     line-height: 1.1;
+    font-size: 1.2rem !important;
+
   }
   p {
     font-size: .8rem;
   }
   h2 {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
@@ -90,7 +93,7 @@ p {
 }
 
 .calcCal {
-  font-size: 2rem;
+  font-size: 1.4rem;
 }
 
 .show-calculator-button {
@@ -107,7 +110,7 @@ p {
 
 .slick-slide {
   display: flex !important;
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .workout-cards {
@@ -116,3 +119,33 @@ p {
   align-items: center;
 }
 
+
+.fitness-steps-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.fitness-step-box {
+  background-color: #f5f5f5;
+  border: 2px solid #e0e0e0;
+  border-radius: 15px;
+  padding: 15px;
+  margin: 10px;
+  width: 250px;
+  text-align: center;
+
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.fitness-step-box strong {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
+.highlighted-text {
+  color: rgb(132, 0, 234) !important;
+
+}
