--- a/src/routes/DietPlan/DietPlanDetails.css
+++ b/src/routes/DietPlan/DietPlanDetails.css
@@ -10,6 +10,16 @@
     text-align: start;
   }
   
+.diet-plan-container {
+  flex: 1 1 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+  
   b{
     color: rgb(132, 0, 234) !important;
   }
