--- a/src/routes/DietPlan/DietPlanDetails.css
+++ b/src/routes/DietPlan/DietPlanDetails.css
@@ -11,7 +11,9 @@
   }
   
 .diet-plan-container {
-  flex: 1 1 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 15px;
