--- a/src/routes/WorkoutPlan/WorkoutPlanDetails.css
+++ b/src/routes/WorkoutPlan/WorkoutPlanDetails.css
@@ -30,7 +30,9 @@
 }
 
 .workout-plan-container {
-  flex: 1 1 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 15px;
@@ -151,4 +153,7 @@ b{
   text-overflow: ellipsis;
   cursor: pointer;
   padding: 10px;
+}
+.add-to-dashboard{
+  margin-top: 0;
 }
