--- a/src/routes/Dashboard/DashboardPage.css
+++ b/src/routes/Dashboard/DashboardPage.css
@@ -33,4 +33,11 @@
     margin-top: 0;
   }
 
-  
+  @media (max-width: 768px) {
+    
+    .dashboard-plans-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
